# Life

./: CMakeLists.txt  life.cpp  life.h  main.cpp
build-bub/: CMakeCache.txt  Makefile  cmake_install.cmake
